Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_app-cabins-api.yml
+++ b/.github/workflows/master_app-cabins-api.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - App-Cabins-API
+name: Build and deploy ASP.Net Core app to Azure Web App - APP-Cabins-API
 
 on:
   push:
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'App-Cabins-API'
+          app-name: 'APP-Cabins-API'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3190F6B63B1749BDA3E9A555C561FA47 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EE21AF4E596E42548DA81E88DD9DF82B }}
           package: .
