--- a/WebAPIObligatorio/appsettings.json
+++ b/WebAPIObligatorio/appsettings.json
@@ -10,3 +10,14 @@
     "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=Obligatorio2P3; Integrated Security=SSPI;"
   }
 }
+//AZURE
+//"ConnectionStrings": {
+//  "CadenaConexion": "Server=tcp:cabinsappdatabase.database.windows.net,1433;Initial Catalog=CabinsAppDataBase;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
+//}
+
+//LOCAL
+//"ConnectionStrings": {
+//  "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=Obligatorio2P3; Integrated Security=SSPI;"
+//}
+
+//PRUEBA DE QUE ESTOY EN MAIN
