Users:-Creation of roles-Creation of Name and Surname-Creation of HTTP query list users

--- a/WebAPIObligatorio/appsettings.json
+++ b/WebAPIObligatorio/appsettings.json
@@ -10,3 +10,5 @@
     "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=Obligatorio2P3; Integrated Security=SSPI;"
   }
 }
+
+// PRUEBAS DE QUE ESTOY EN NEW VERSION
