--- a/WebAPIObligatorio/appsettings.json
+++ b/WebAPIObligatorio/appsettings.json
@@ -7,9 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=Obligatorio2P3; Integrated Security=SSPI;"
+    "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=ProyectoGerman; Integrated Security=SSPI;"
   }
 }
+
+// PRUEBAS DE QUE ESTOY EN NEW VERSION
+
 //AZURE
 //"ConnectionStrings": {
 //  "CadenaConexion": "Server=tcp:cabinsappdatabase.database.windows.net,1433;Initial Catalog=CabinsAppDataBase;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
@@ -21,3 +24,6 @@
 //}
 
 //PRUEBA DE QUE ESTOY EN MAIN
+
+
+// PRUEBAS DE QUE ESTOY EN NEW VERSION
