--- a/WebAPIObligatorio/appsettings.json
+++ b/WebAPIObligatorio/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=ProyectoGerman; Integrated Security=SSPI;"
+    "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=ProyectoGerman5; Integrated Security=SSPI;"
   }
 }
 
