Documentacion api swagger

--- a/WebAPIObligatorio/appsettings.json
+++ b/WebAPIObligatorio/appsettings.json
@@ -7,10 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=ProyectoGerman5; Integrated Security=SSPI;"
+    "CadenaConexion": "Server=tcp:databaseserver-german.database.windows.net,1433;Initial Catalog=ProyectoCabañas;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
   }
 }
 
+//  Server=tcp:databaseserver-german.database.windows.net,1433;Initial Catalog=ProyectoCabañas;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
 //AZURE
 //"ConnectionStrings": {
 //  "CadenaConexion": "Server=tcp:cabinsappdatabase.database.windows.net,1433;Initial Catalog=CabinsAppDataBase;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
@@ -18,6 +19,6 @@
 
 //LOCAL
 //"ConnectionStrings": {
-//  "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=Obligatorio2P3; Integrated Security=SSPI;"
+//   "CadenaConexion": "Data Source=(localdb)\\MSSQLLOCALDB; Initial Catalog=ProyectoGerman5; Integrated Security=SSPI;"
 //}
 
