--- a/.github/workflows/master_cabinsapi.yml
+++ b/.github/workflows/master_cabinsapi.yml
@@ -39,7 +39,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: ${{ https://app-cabins-api.azurewebsites.net/ }}
 
     steps:
       - name: Download artifact from build job
