--- a/.github/workflows/master_cabinsapi.yml
+++ b/.github/workflows/master_cabinsapi.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - CabinsAPI
 
 on:
@@ -39,7 +36,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ https://app-cabins-api.azurewebsites.net/ }}
+      url: 'https://app-cabins-api.azurewebsites.net'
 
     steps:
       - name: Download artifact from build job
@@ -54,4 +51,4 @@ jobs:
           app-name: 'CabinsAPI'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EAB8335629FD4CD98363A208370DC0D3 }}
-          package: .
+          package: .net-app
