Creacion de documentacion swagger para produccion

--- a/WebAPIObligatorio/appsettings.json
+++ b/WebAPIObligatorio/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaConexion": "Server=tcp:databaseserver-german.database.windows.net,1433;Initial Catalog=ProyectoCabañas;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
+    "CadenaConexion": "Server=tcp:databaseserver-german.database.windows.net,1433;Initial Catalog=ProyectoCabañas;Persist Security Info=False;User ID=GM255617@fi365.ort.edu.uy;Password=DebiGM2002ER2000;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication=Active Directory Password"
   }
 }
 
